--- a/ECommerce/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce/Views/Shared/_AdminLayout.cshtml
@@ -7,6 +7,8 @@
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/adminstyle.css" asp-append-version="true" />
+
+    @RenderSection("Styles",required : false);
 </head>
 <body>
     <!-- overlay -->
@@ -16,13 +18,18 @@
     <div class="col-md-3 col-lg-2 px-0 position-fixed h-100 bg-white shadow-sm sidebar" id="sidebar">
         <h1 class="bi bi-bootstrap text-primary d-flex my-4 justify-content-center"></h1>
         <div class="list-group rounded-0">
-            <a href="#" class="list-group-item list-group-item-action active border-0 d-flex align-items-center">
+            <a asp-controller="Dashboard" asp-action="index" class="list-group-item list-group-item-action active border-0 d-flex align-items-center">
                 <span class="bi bi-border-all"></span>
                 <span class="ml-2">Dashboard</span>
             </a>
-            <a href="#" class="list-group-item list-group-item-action border-0 align-items-center">
+            <a asp-controller="product" asp-action="index" class="list-group-item list-group-item-action border-0 align-items-center">
                 <span class="bi bi-box"></span>
                 <span class="ml-2">Products</span>
+            </a>
+
+            <a asp-controller="Category" asp-action="index" class="list-group-item list-group-item-action border-0 align-items-center">
+                <span class="bi bi-box"></span>
+                <span class="ml-2">Category</span>
             </a>
 
             <button class="list-group-item list-group-item-action border-0 d-flex justify-content-between align-items-center" data-toggle="collapse" data-target="#sale-collapse">
@@ -79,7 +86,9 @@
             @RenderBody();
         </main>
     </div>
+    @* @RenderSection ("Scripts", required: false); *@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
