--- a/ECommerce/Views/Product/Details.cshtml
+++ b/ECommerce/Views/Product/Details.cshtml
@@ -19,13 +19,38 @@
     <h2>@Model.Name</h2>
     <p>@Model.Description</p>
     <p>Price: @Model.Price $</p>
+@*     @if(Model.Quantity == 0)
+    {
+        <p style="color:red">Out of Stock</p>
+    }
+    else if(Model.Quantity < 5)
+    {
+        <p style="color:orange">Only @Model.Quantity items left in stock!</p>
+    }
+    else
+    {
+        <p style="color:green">In Stock</p>
+}
+) *@
     <p>Available Stock: @Model.Quantity</p>
+   
+    <span quantity="@Model.Quantity"></span>
+
     <p>Category: @Model.Category?.Name</p>
     <p>Supplier: @Model.Supplier?.User.Name</p>
     <p>Shop Name: @Model.Supplier?.ShopName</p>
+
+
     @* <form asp-action="AddToCart" method="post">
         <input type="hidden" name="productId" value="@Model.Id" />
         <label for="quantity">Quantity:</label>
         <input type="number" id="quantity" name="quantity" value="1" min="1" max="@Model.Quantity" />
         <button type="submit">Add to Cart</button>
     </form> *@
+
+
+
+    <div style="margin-bottom:200px"></div>
+
+
+    @* <div id="last"></div> *@
