--- a/ECommerce/Views/_ViewImports.cshtml
+++ b/ECommerce/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using ECommerce
 @using ECommerce.Models
 @using ECommerce.DTOs
+
+@addTagHelper *, ECommerce
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
