--- a/ECommerce/Views/Product/Index.cshtml
+++ b/ECommerce/Views/Product/Index.cshtml
@@ -1,8 +1,12 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model List<Product>
+@model PaginationDTO<Product>
 @{
+    var catagories = ViewData["Categories"] as List<SelectListItem>;
+    // c = 6  // pN = 1  
+    bool canMoveNext = Model.Count >= (Model.PageSize * Model.PageNumber);
+    bool canMovePrev = Model.PageNumber > 1;
 }
 @section Styles {
     <style>
@@ -17,6 +21,29 @@
         }
     </style>
 }
+
+<form class="row mb-5" asp-action="index" method="get" >
+    <div class="col-4">
+        <label>Search For Your Product</label>
+        <input class="form-control" type="text" name="SearchText" />
+    </div>
+    <div class="col-4">
+        <label>Search For Shop</label>
+        <input class="form-control" type="text" name="ShopName" />
+    </div>
+    <div class="col-4">
+        <label>Select price</label>
+        <input class="form-control" type="number" name="Price" />
+    </div>
+    <div class="col-4">
+        <label>Select Category</label>
+        <select class="form-control" name="CategoryId" asp-items="@catagories">
+            <option value="0" selected>choose one Category</option>
+        </select>
+    </div>
+    <input type="hidden" name="PageNumber" value="@Model.PageNumber" />
+    <input class="btn btn-light" type="submit" value="Filter" />
+</form>
 
 
 <a asp-action= "add" asp-controller="product" class="bbttnn">Add New Product</a>
@@ -33,7 +60,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var product in Model)
+        @foreach (var product in Model.List)
         {
             <tr>
                 <td>@product.Id</td>
@@ -48,4 +75,10 @@
         }
 </table>
 
-<h1>Testing Product Controller</h1>
+@* <div>
+    <a asp-action="index" asp-route-pageNumber="@(Model.PageNumber - 1)"  disabled="@canMovePrev" >Previos</a>
+    <a asp-action="index" asp-route-pageNumber="@(Model.PageNumber + 1)" disabled="@canMoveNext">NexT</a>
+</div> *@
+
+
+
