--- a/ECommerce/Views/Product/Add.cshtml
+++ b/ECommerce/Views/Product/Add.cshtml
@@ -13,7 +13,7 @@
     </style>
 }
 
-@model ProductDTO;
+@model ProductCreationDTO;
 @{
     List<SelectListItem> categories = ViewData["Categories"] as List<SelectListItem>;
 }
