--- a/ECommerce/Views/Home/Index.cshtml
+++ b/ECommerce/Views/Home/Index.cshtml
@@ -1,8 +1,26 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    var test = Model;
 }
+@model List<ProductDetailsDTO>
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    
 </div>
+
+
+<div class="row">
+    @foreach (var product in Model)
+    {       
+        @* <partial name="_ProductCard" model="product"></partial> *@
+
+       
+        @Html.Partial("_ProductCard", product);
+        
+    }
+</div>
+
+
+
+
