Day 5  - Identity Core

--- a/ECommerce/Views/Product/Index.cshtml
+++ b/ECommerce/Views/Product/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model PaginationDTO<ProductDetailsDTO>
+﻿@using ECommerce.DTOs
+@model PaginationDTO<ProductDetailsDTO>
 @{
     var catagories = ViewData["Categories"] as List<SelectListItem>; 
     bool canMoveNext = Model.Count >= (Model.PageSize * Model.PageNumber);
