--- a/ECommerce/Views/Shared/Components/ReletedProduct/Default.cshtml
+++ b/ECommerce/Views/Shared/Components/ReletedProduct/Default.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<ProductDetailsDTO>;
+﻿@using ECommerce.DTOs
+@model List<ProductDetailsDTO>;
 <h1>@ViewBag.Title</h1>
 <div class="row"> 
 @foreach (var product in Model)
