--- a/ECommerce/Views/Account/Register.cshtml
+++ b/ECommerce/Views/Account/Register.cshtml
@@ -27,6 +27,7 @@
         <h2>Register</h2>
 
         <form asp-action="Register" asp-controller="Account" method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
 
             <div class="form-group">
                 <label asp-for="FullName"></label>
@@ -58,6 +59,15 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="Role"></label>
+                <select asp-for="Role" asp-items="@ViewBag.Roles" class="form-control" >
+                    <option selected value="">select Role</option>
+                </select>
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
+
 
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
