--- a/ECommerce/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,12 @@
-﻿<!DOCTYPE html>
+﻿@{
+    var data = User.Identity.Name;
+
+    var test = User.Identity;
+}
+
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -64,22 +72,7 @@
 
     <div class="col-md-9 col-lg-10 ml-md-auto px-0 ms-md-auto">
         <!-- top nav -->
-        <nav class="w-100 d-flex px-4 py-2 mb-4 shadow-sm">
-            <!-- close sidebar -->
-            <button class="btn py-0 d-lg-none" id="open-sidebar">
-                <span class="bi bi-list text-primary h3"></span>
-            </button>
-            <div class="dropdown ml-auto">
-                <button class="btn py-0 d-flex align-items-center" id="logout-dropdown" data-toggle="dropdown" aria-expanded="false">
-                    <span class="bi bi-person text-primary h4"></span>
-                    <span class="bi bi-chevron-down ml-1 mb-2 small"></span>
-                </button>
-                <div class="dropdown-menu dropdown-menu-right border-0 shadow-sm" aria-labelledby="logout-dropdown">
-                    <a class="dropdown-item" href="#">Logout</a>
-                    <a class="dropdown-item" href="#">Settings</a>
-                </div>
-            </div>
-        </nav>
+        
 
         <!-- main content -->
         <main class="p-4 min-vh-100">
