--- a/ECommerce/Views/_ViewImports.cshtml
+++ b/ECommerce/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ECommerce
 @using ECommerce.Models
 @using ECommerce.DTOs
+@using System.Security.Claims
 
 @addTagHelper *, ECommerce
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
